correct order by in group members search (admin)